Body array and file examples
